--- a/style.css
+++ b/style.css
@@ -1,91 +1,86 @@
-.container {
+body {
+    background-color: #f4f4f4;
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
 
-      width: 575px;
-    
-      height: 825px;
-    
-      
-    
-      background-color: #797978;
-    
-      padding-left: 30px;
-    
-    }
-    
-    #height,
-    
-    #weight {
-    
-      width: 150px;
-    
-      height: 25px;
-    
-      margin-top: 30px;
-    
-    }
-    
-      
-    
-    #weight-guide {
-    
-      margin-left: 75px;
-    
-      margin-top: 25px;
-    
-    }
-    
-      
-    
-    #results {
-    
-      font-size: 35px;
-    
-      margin-left: 90px;
-    
-      margin-top: 20px;
-    
-      color: rgb(241, 241, 241);
-    
-    }
-    
-      
-    
-    button {
-    
-      width: 150px;
-    
-      height: 35px;
-    
-      margin-left: 90px;
-    
-      margin-top: 25px;
-    
-      background-color: #fff;
-    
-      padding: 1px 30px;
-    
-      border-radius: 8px;
-    
-      color: #212121;
-    
-      text-decoration: none;
-    
-      border: 2px solid #212121;
-    
-      
-    
-      font-size: 25px;
-    
-    }
-    
-      
-    
-    h1 {
-    
-      padding-left: 15px;
-    
-      padding-top: 25px;
-    
-    }
-    
-    
+.container {
+    width: 400px;
+    background-color: #797978;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+h1 {
+    color: #fff;
+    margin-bottom: 20px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+label {
+    font-size: 18px;
+    color: #fff;
+}
+
+input {
+    width: 200px;
+    height: 30px;
+    padding: 5px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 16px;
+}
+
+/* Button styles */
+button {
+    width: 150px;
+    height: 40px;
+    background-color: #ffcc00;
+    border: none;
+    border-radius: 8px;
+    font-size: 18px;
+    cursor: pointer;
+    color: #333;
+    margin-top: 15px;
+    transition: 0.3s;
+}
+
+button:hover {
+    background-color: #ffdb4d;
+}
+
+#results {
+    font-size: 20px;
+    color: #fff;
+    margin-top: 15px;
+}
+
+#weight-guide {
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+#weight-guide h3 {
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+#weight-guide p {
+    font-size: 16px;
+    color: #eee;
+}
